@@ -2,6 +2,7 @@ SCons/__init__.py
 SCons/Action.py
 SCons/Builder.py
 SCons/compat/__init__.py
+SCons/compat/_subprocess.py
 SCons/compat/_UserString.py
 SCons/compat/builtins.py
 SCons/Conftest.py
